fixed WorldGuard, PlotSquared, LWC not working
Added GuiItemDragEvent

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,5 +2,9 @@ name: WolfyUtilities
 api-version: 1.13
 version: 0.1.0
 author: WolfyScript
+softdepend:
+  - LWC
+  - PlotSquared
+  - WorldGuard
 
 main: me.wolfyscript.utilities.main.Main
