added Config load method, GuiCLickEvent added click in bottom inv, added reload methods for reloading configs and languages, added Info command about the plugin /wolfyutilities
added LWCUtils
added PlotSquaredUtils
added WorldGuardUtils
removed XMaterial

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: WolfyUtilities
 api-version: 1.13
-version: 0.1.0
+version: 1.0.0
 author: WolfyScript
 softdepend:
   - LWC
@@ -8,3 +8,7 @@ softdepend:
   - WorldGuard
 
 main: me.wolfyscript.utilities.main.Main
+
+commands:
+  wolfyutils:
+    description: displays version of this plugin
