Fixed JsonConfig not compatible with UTF-8, implemented CustomItems, Added CustomItemBreakEvent/CustomItemPlaceEvent, Added GuiCloseEvent, Added Gson Utils, Added the option to register custom TypeAdapter for JsonConfigs (they need to be registered in onLoad()), Added CustomData for CustomItems that are saved in the item config too, Added new Chat methods to GuiWindows, Some bug fixes

--- a/src/main/java/plugin.yml
+++ b/src/main/java/plugin.yml
@@ -1,11 +1,12 @@
 name: WolfyUtilities
 api-version: 1.13
-version: 1.4.0.2
+version: 1.5.0.0-pre2
 author: WolfyScript
 softdepend:
   - LWC
   - PlotSquared
   - WorldGuard
+  - MythicMobs
 
 main: me.wolfyscript.utilities.main.Main
 
