Replaced Nashorn with Rhino by Mozilla Merged the javascript functions onPlayer and onPlayerHand

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <version>7.0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mozilla</groupId>
+            <artifactId>rhino</artifactId>
+            <version>1.7.12</version>
+        </dependency>
     </dependencies>
 
     <build>
