--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,7 @@
                 <includes>
                     <include>*</include>
                 </includes>
+                <filtering>true</filtering> <!-- this replaces, filters, all placeholders in the resources folder (such as ${project.version} in plugin.yml) -->
             </resource>
         </resources>
     </build>
