--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.wolfyscript</groupId>
     <artifactId>wolfyutilities</artifactId>
-    <version>1.5.1.0</version>
+    <version>1.5.1.1</version>
     <properties>
         <!-- Generic properties -->
         <java.version>1.8</java.version>
@@ -186,7 +186,7 @@
             <resource>
                 <directory>${project.basedir}/src/main/resources</directory>
                 <includes>
-                    <include>*</include>
+                    <include>**/*</include>
                 </includes>
                 <filtering>true
                 </filtering> <!-- this replaces, filters, all placeholders in the resources folder (such as ${project.version} in plugin.yml) -->
