--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
             <id>CodeMC</id>
             <url>https://repo.codemc.org/repository/maven-public</url>
         </repository>
+
     </repositories>
 
     <dependencies>
@@ -87,11 +88,6 @@
             <groupId>com.sk89q.worldguard</groupId>
             <artifactId>worldguard-bukkit</artifactId>
             <version>7.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mozilla</groupId>
-            <artifactId>rhino</artifactId>
-            <version>1.7.12</version>
         </dependency>
         <dependency>
             <groupId>com.github.intellectualsites.plotsquared</groupId>
@@ -176,17 +172,18 @@
                             <shadedPattern>me.wolfyscript.utilities.main.metrics</shadedPattern>
                         </relocation>
                     </relocations>
+                    <shadeSourcesContent>true</shadeSourcesContent>
                 </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
+
                         </goals>
                         <configuration>
                             <artifactSet>
                                 <includes>
-                                    <include>org.mozilla:rhino</include>
                                     <include>org.bstats</include>
                                 </includes>
                             </artifactSet>
