Fixed chat input compatibility with ChatColor2 Update 1.5.6.14

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,11 @@ name: WolfyUtilities
 api-version: 1.13
 version: ${project.version}
 author: WolfyScript
+
+loadbefore:
+  - ChatColor
+  - ChatColor2
+
 softdepend:
   - LWC
   - PlotSquared
