--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.wolfyscript</groupId>
     <artifactId>wolfyutilities</artifactId>
-    <version>1.6.2.1</version>
+    <version>1.6.2.2</version>
     <properties>
         <!-- Generic properties -->
         <java.version>1.8</java.version>
@@ -131,6 +131,11 @@
             <artifactId>mcMMO</artifactId>
             <version>2.1.139-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.lumine.xikage</groupId>
+            <artifactId>mythicmobs</artifactId>
+            <version>4.9.1</version>
         </dependency>
         <!--Dependencies from private repo! They require credentials to access!-->
         <dependency>
