--- a/wolfyutilities/pom.xml
+++ b/wolfyutilities/pom.xml
@@ -28,31 +28,31 @@
         </dependency>
         <!-- NMS module -->
         <dependency>
-            <groupId>com.wolfyscript</groupId>
+            <groupId>com.wolfyscript.wolfyutilities</groupId>
             <artifactId>nmsutil-v1_14_R1</artifactId>
             <version>1.6.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.wolfyscript</groupId>
+            <groupId>com.wolfyscript.wolfyutilities</groupId>
             <artifactId>nmsutil-v1_15_R1</artifactId>
             <version>1.6.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.wolfyscript</groupId>
+            <groupId>com.wolfyscript.wolfyutilities</groupId>
             <artifactId>nmsutil-v1_16_R1</artifactId>
             <version>1.6.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.wolfyscript</groupId>
+            <groupId>com.wolfyscript.wolfyutilities</groupId>
             <artifactId>nmsutil-v1_16_R2</artifactId>
             <version>1.6.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.wolfyscript</groupId>
+            <groupId>com.wolfyscript.wolfyutilities</groupId>
             <artifactId>nmsutil-v1_16_R3</artifactId>
             <version>1.6.3.0</version>
             <scope>compile</scope>
