Testing new ParticleAnimation system Added CircleAnimator to spawn a circle Added BasicAnimator that just spawns the particle Reformatted the constructors of the ParticleEffect Added test preset ParticleEffect and ParticleAnimation

--- a/wolfyutilities/src/main/resources/plugin.yml
+++ b/wolfyutilities/src/main/resources/plugin.yml
@@ -23,7 +23,9 @@ commands:
   wolfyutils:
     description: displays version of this plugin
   particle_effect:
-    description: spawn/stop particle effects
+    description: spawn particle effects
+  particle_animation:
+    description: spawn/stop particle animations
   wua:
     description: handles and executes ChatClickActions
   wui:
