--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,13 @@
             <version>4.10.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.Indyuce</groupId>
+            <artifactId>mmolib</artifactId>
+            <version>1.7.4</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
         <!--Dependencies from private repo! They require credentials to access!-->
         <dependency>
             <groupId>io.th0rgal</groupId>
