--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,13 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>dev.lone</groupId>
+            <artifactId>itemsadder</artifactId>
+            <version>2.2.10</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>net.Indyuce</groupId>
             <artifactId>mmoitems</artifactId>
             <version>6.5.4</version>
