Added io.netty v4 dependency

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,12 @@
             <version>2.11.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.63.Final</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
