--- a/wolfyutilities/pom.xml
+++ b/wolfyutilities/pom.xml
@@ -103,10 +103,11 @@
                                     <shadedPattern>me.wolfyscript.utilities.libraries.com.fasterxml.jackson
                                     </shadedPattern>
                                 </relocation>
+                                <!--
                                 <relocation>
                                     <pattern>io.netty</pattern>
                                     <shadedPattern>me.wolfyscript.utilities.libraries.io.netty4</shadedPattern>
-                                </relocation>
+                                </relocation>-->
                             </relocations>
                             <shadeSourcesContent>true</shadeSourcesContent>
                             <shadedArtifactAttached>false</shadedArtifactAttached>
@@ -115,7 +116,6 @@
                                     <include>com.wolfyscript.wolfyutilities</include>
                                     <include>org.bstats</include>
                                     <include>com.fasterxml.jackson.core</include>
-                                    <include>io.netty</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
