--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
             <version>1.1.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.elmakers.mine.bukkit</groupId>
+            <artifactId>MagicAPI</artifactId>
+            <version>9.3</version>
+            <scope>provided</scope>
+        </dependency>
         <!--Dependencies from private repo! They require credentials to access!-->
         <dependency>
             <groupId>io.th0rgal</groupId>
